templates/enketo-redis-cache-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.fynarfin.service: enketo-redis-cache
  name: enketo-redis-cache
spec:
  ports:
    - name: "6380"
      port: 6380
      targetPort: 6380
  selector:
    io.fynarfin.service: enketo-redis-cache
status:
  loadBalancer: {}
