templates/enketo-redis-main-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.fynarfin.service: enketo-redis-main
  name: enketo-redis-main
spec:
  ports:
    - name: "6379"
      port: 6379
      targetPort: 6379
  selector:
    io.fynarfin.service: enketo-redis-main
status:
  loadBalancer: {}
