templates/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.fynarfin.service: postgres
  name: postgres
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    io.fynarfin.service: postgres
status:
  loadBalancer: {}
