templates/pyxform-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.fynarfin.service: pyxform
  name: pyxform
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    io.fynarfin.service: pyxform
status:
  loadBalancer: {}
